Fixed whitespace on mobile and page name

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smothing: antialiased;
   font-feature-settings: "liga", "tnum", "case", "calt", "zero", "ss01", "loc1";
+  background-color: #1b1c1d;
 }
 
 /* Navigation Bar */
